--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,33 @@
   width: 100%;
 }
 
+.navbar home {
+  float: left;
+  display: block;
+  color: #1e272c;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.navbar dir {
+  float: left;
+  display: block;
+  color: #1e272c;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.navbar down {
+  float: left;
+  display: block;
+  color: #1e272c;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
 .main {
   margin-top: 30px;
 }
