--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 <!--Roboto Body Formatting-->
-body {
+p, body {
     font-family: Roboto, sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -22,7 +22,7 @@ h1 {
     font-family: "Tinos", serif;
     font-weight: 700;
     font-style: normal;
-    font-size: 1px;
+    font-size: 50px;
 }
 h2 {
     font-family: "Tinos", serif;
@@ -57,6 +57,7 @@ h6 {
 
 nav {
     position: fixed;
+    text-align: center;
     top: 0;
     width: 100%;
     height: 60px;
