--- a/styles.css
+++ b/styles.css
@@ -1,62 +1,63 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&family=Tinos:wght@700&display=swap');
 <!--Roboto Body Formatting-->
-p, body {
+p, body{
+    margin-top: 72px;
     font-family: "Roboto", sans-serif;
     font-weight: 400;
     font-style: normal;
     font-size: 14.67px;
 }
-bold {
+bold{
     font-family: "Roboto", sans-serif;
     font-weight: 700;
     font-style: normal;
     font-size: 14.67px;
 }
-italic {
+italic{
     font-family: "Roboto", sans-serif;
     font-weight: 400;
     font-style: normal;
     font-size: 14.67px;
 }
 <!--Tinos Heading Formatting-->
-h1 {
+h1{
     font-family: "Tinos", serif;
     font-weight: 700;
     font-style: normal;
     font-size: 50px;
 }
-h2 {
+h2{
     font-family: "Tinos", serif;
     font-weight: 700;
     font-style: normal;
     font-size: 22.67px;
 }
-h3 {
+h3{
     font-family: "Tinos", serif;
     font-weight: 700;
     font-style: normal;
     font-size: 18.67px;
 }
-h4 {
+h4{
     font-family: "Tinos", serif;
     font-weight: 700;
     font-style: normal;
     font-size: 16px;
 }
-h5 {
+h5{
     font-family: "Tinos", serif;
     font-weight: 700;
     font-style: normal;
     font-size: 14.67px;
 }
-h6 {
+h6{
     font-family: "Tinos", serif;
     font-weight: 700;
     font-style: italic;
     font-size: 14.67px;
 }
 
-nav {
+nav{
     position: fixed;
     text-align: center;
     top: 0;
@@ -65,3 +66,11 @@ nav {
     background-color: mediumaquamarine;
     z-index: 1;
   }
+navline{
+    position: fixed;
+    top: 60;
+    width: 100%;
+    height: 12px;
+    background-color: firebrick;
+    z-index: 1;
+}
