--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@ italic{
 }
 <!--Tinos Heading Formatting-->
 h1{
+    position: flex;
     font-family: "Tinos", serif;
     font-weight: 700;
     font-style: normal;
@@ -68,7 +69,7 @@ nav{
   }
 navline{
     position: fixed;
-    top: 60;
+    margin-top: 60px;
     width: 100%;
     height: 12px;
     background-color: firebrick;
