--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ p, body{
     font-weight: 400;
     font-style: normal;
     font-size: 14.67px;
+    margin-left: 14px;
 }
 bold{
     font-family: "Roboto", sans-serif;
@@ -25,6 +26,8 @@ h1{
     font-weight: 700;
     font-style: normal;
     font-size: 50px;
+    margin-right: 16px;
+    margin-left: 14px;
 }
 h2{
     font-family: "Tinos", serif;
